--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,40 +1,21 @@
-name: CI - pull request
+name: CI
 
-on:
-  pull_request:
-    branches: [ "main" ]
+on: [pull_request]
 
 jobs:
-  verify-pr:
-    name: Verify that tests pass afer merging the PR on Linux
+  verify-pr-linux:
+    name: 'Verify that merging PR #${{ github.event.number }} causes no regression (Linux)'
     runs-on: ubuntu-latest
     steps:
     - name: Checkout repo
       uses: actions/checkout@v3
 
-    - name: Merge "${{ github.head_ref }}" into "${{ github.base_ref }}"
-      run: |
-        current_branch="$( git branch --show-current)"
-        base_branch="${{ github.base_ref }}"
-        head_branch="${{ github.head_ref }}"
-        git fetch origin
-        if [[ "$current_branch" != "$base_branch" ]]; then
-            git checkout --track "origin/$base_branch"
-        fi
-        git config user.email "jarek.glowacki@gmail.com"
-        git config user.name "jarzec"
-        git merge "origin/${head_branch}"
-        if [[ $? -ne 0 ]]; then
-            echo "Merge failed"
-            exit 1
-        fi
-
-    - name: Run tests using GCC 10
+    - name: Run regression tests using GCC 10
       run: |
         cd regression-tests
         bash run-tests.sh g++-10
 
-    - name: Run tests using Clang 12
+    - name: Run regression tests using Clang 12
       run: |
         cd regression-tests
         bash run-tests.sh clang++-12
