Add section navigation
Reorganize sources

Fix long code lines to avoid horizontal scroll bars

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -19,8 +19,6 @@ site_name: "Cpp2 and cppfront — An experimental 'C++ syntax 2', and its first 
 theme:
   name: material
   features:
-    - navigation.tabs
-    - navigation.tabs.sticky
     - navigation.sections
     - navigation.expand
     - navigation.instant
@@ -46,6 +44,24 @@ theme:
         name: switch to light mode
         primary: teal
         accent: lime
+
+nav:
+  - 'Welcome & getting started': index.md
+  - 'Cpp2 reference':
+    - 'Overview': cpp2.md
+    - 'Common programming concepts': cpp2/common.md
+    - 'Common expressions': cpp2/expressions.md
+    - 'Declaration syntax': cpp2/declarations.md
+    - 'Functions & variables': cpp2/functions-and-variables.md
+    - 'Types': cpp2/types.md
+    - 'Metafunctions & reflection API': cpp2/metafunctions.md
+    - 'Namespaces': cpp2/namespaces.md
+    - 'Aliases': cpp2/aliases.md
+    - 'Modules': cpp2/modules.md
+  - 'Cppfront reference':
+    - 'Overview': cppfront.md
+    - 'Using Cpp1 (today''ds C++) and Cpp2 in the same source file': cppfront/mixed.md
+    - 'Cppfront command line options': cppfront/options.md
 
 markdown_extensions:
   - pymdownx.highlight:
