--- a/.github/workflows/build-cppfront.yaml
+++ b/.github/workflows/build-cppfront.yaml
@@ -38,6 +38,9 @@ jobs:
           - runs-on: macos-latest
             compiler: clang++
             cxx-std: 'c++20'
+          - runs-on: ubuntu-22.04
+            compiler: clang++-15
+            cxx-std: 'c++20'
           - runs-on: ubuntu-24.04
             compiler: clang++-16
             cxx-std: 'c++20'
@@ -47,6 +50,9 @@ jobs:
           - runs-on: ubuntu-24.04
             compiler: clang++-18
             cxx-std: 'c++20'
+          - runs-on: ubuntu-24.04
+            compiler: clang++-18
+            cxx-std: 'c++2b'
           - runs-on: ubuntu-24.04
             compiler: g++-14
             cxx-std: 'c++2b'
