--- a/.github/workflows/build-cppfront.yaml
+++ b/.github/workflows/build-cppfront.yaml
@@ -46,7 +46,7 @@ jobs:
             cxx-std: 'c++20'
           - runs-on: ubuntu-24.04
             compiler: clang++-18
-            cxx-std: 'c++20'
+            cxx-std: 'c++2b'
           - runs-on: ubuntu-24.04
             compiler: g++-14
             cxx-std: 'c++2b'
